--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,6 +1,6 @@
 <ion-view hide-nav-bar="true">
   <ion-content overflow-scroll="false" class="stable-bg" has-bouncing="true"  delegate-handle="main-content">
-    <div class="row text-center padding-vertical light row-center " id="main-search">
+    <div class="row text-center  light row-center " id="main-search">
       <strong class="col-15">深圳 <i class="icon ion-arrow-down-b"></i></strong>
       <input type="text" class="col-75" placeholder="  请输入关键字"/>
       <i class="col  icon ion-ios-search"></i>
@@ -77,13 +77,13 @@
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" class="full-image" alt="">
+              <img ng-src="img/main/cp@5.jpg" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
             </span>
             <span>
-              <img ng-src="img/main/1.png" class="full-image" alt="">
+              <img ng-src="img/main/cp@5.jpg" class="full-image" alt="">
               <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段</p>
               <p class="row row-center"><strong class="energized">￥49.88</strong><i
                 class="col icon ion-ios-cart positive text-right"></i></p>
@@ -111,7 +111,7 @@
           class="col icon ion-ios-cart positive text-right"></i></p>
       </ion-item>
       <ion-item class="item-thumbnail-left main-hot-sale">
-        <img ng-src="img/main/cp@4.jpg" alt="">
+        <img ng-src="img/main/cp@5.jpg" alt="">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span>00</span></span> <i
