--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -11,7 +11,7 @@
   <ion-nav-buttons side="right">
     <button class="button icon ion-ios-search no-border grey" ng-click="modal.show()"></button>
   </ion-nav-buttons>
-  <ion-content overflow-scroll="false" has-bouncing="true" scroll="false">
+  <ion-content overflow-scroll="false" has-bouncing="true" >
     <div class="row row-no-padding" id="classify">
       <div class="col-25 stable-bg">
         <ion-list class="list-borderless ">
@@ -22,90 +22,90 @@
         </ion-list>
       </div>
       <div class="col-75">
-        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false" has-bouncing="true">
+        <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false"  has-bouncing="true">
           <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <span class="col-30">
+              <a ng-href="" nav-direction=forward class="col-30">
                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                <p>伊利</p>
-             </span>
-              <span class="col-30">
+             </a>
+              <a ng-href="" nav-direction=forward class="col-30">
                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
-             </span>
-              <span class="col-30">
+             </a>
+              <a ng-href="" nav-direction=forward class="col-30">
                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
-             </span>
-              <span class="col-30">
+             </a>
+              <a ng-href="" nav-direction=forward class="col-30">
               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
               <p>伊利</p>
-              </span>
-              <span class="col-30">
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
-             </span>
-              <span class="col-30">
+             </a>
+              <a ng-href="" nav-direction=forward class="col-30">
                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
-             </span>
+             </a>
              </span>
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
-              <p class="stable-bg  full-image text-left classify-details-bar"> 牛奶系列</p>
-              <span class="col-30">
-               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
-              <span class="col-30">
-              <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
-              <p>伊利</p>
-              </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
+              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+                <p>蒙牛</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+                <p>蒙牛</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
               </span>
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <span class="col-30">
-               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
-              <span class="col-30">
-              <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
-              <p>伊利</p>
-              </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
-               <p>蒙牛</p>
-             </span>
-              <span class="col-30">
-               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
-             </span>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+                <p>蒙牛</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+                <p>蒙牛</p>
+              </a>
+              <a ng-href="" nav-direction=forward class="col-30">
+                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+                <p>伊利</p>
+              </a>
               </span>
             </div>
           </div>
