--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -19,7 +19,7 @@
         <p><span>余额 : 3650.00</span></p>
       </div>
       <div class="col-20">
-        <a class="light">领取积分 <i class="icon ion-ios-arrow-forward"></i>
+        <a  class="light">领取积分 <i class="icon ion-ios-arrow-forward"></i>
         </a>
       </div>
     </div>
@@ -45,13 +45,13 @@
       <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/Invitation.png" alt="">
         <p>邀请记录</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/opinion.png" alt="">
+      <a ng-href="#/helpfeedback" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/opinion.png" alt="">
         <p>意见反馈</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/password.png" alt="">
+      <a ng-href="#/changepassword" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/password.png" alt="">
         <p>修改密码</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
+      <a ng-href="tel:123456" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
         <p>联系客服</p>
       </a>
     </div>
