--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="row row-no-padding text-center row-wrap row-center light-bg userinfo-list">
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/data.png" alt="">
+      <a ng-href="#/organizingdata" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/data.png" alt="">
         <p>完善资料</p>
       </a>
       <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/order.png" alt="">
@@ -39,7 +39,7 @@
       <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/integral.png" alt="">
         <p>我的积分</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/address.png" alt="">
+      <a ng-href="#/addressmanage" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/address.png" alt="">
         <p>地址管理</p>
       </a>
       <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/Invitation.png" alt="">
@@ -51,7 +51,7 @@
       <a ng-href="#/changepassword" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/password.png" alt="">
         <p>修改密码</p>
       </a>
-      <a ng-href="tel:123456" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
+      <a ng-href="#/contactus" nav-direction=forward class="col-33 padding-top userinfo-border-r"><img ng-src="img/account/contactus.png" alt="">
         <p>联系客服</p>
       </a>
     </div>
