--- a/www/templates/account/resetpassword.html
+++ b/www/templates/account/resetpassword.html
@@ -2,8 +2,8 @@
   <ion-content overflow-scroll="false" class="stable-bg" id="userresetpassword">
     <div class="row row-horizontal-around row-top  light account-top-bg">
       <i class="col icon ion-ios-arrow-back" ng-click="$ionicGoBack()"></i>
-      <strong class="col-70 text-center"> 重置密码</strong >
-      <a class="col  light text-center subdued"  ng-href="#/login" nav-direction=forward>登陆</a>
+      <strong class="col-70 text-center">重置密码</strong >
+      <a class="col  light text-center subdued"  ng-href="#/login" nav-direction=forward>登录</a>
     </div>
     <form name="resetpasswordForm">
       <div class="list">
