--- a/www/templates/account.html
+++ b/www/templates/account.html
@@ -19,7 +19,7 @@
         <p><span>余额 : 3650.00</span></p>
       </div>
       <div class="col-20">
-        <a  class="light">领取积分 <i class="icon ion-ios-arrow-forward"></i>
+        <a  ng-href="#/myntegral" nav-direction=forward  class="light subdued">领取积分 <i class="icon ion-ios-arrow-forward"></i>
         </a>
       </div>
     </div>
@@ -30,19 +30,19 @@
       <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/order.png" alt="">
         <p>我的订单</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/coupon.png" alt="">
+      <a ng-href="#/mycoupon" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/coupon.png" alt="">
         <p>我的优惠卷</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/wallet.png" alt="">
+      <a ng-href="#/mywallet" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/wallet.png" alt="">
         <p>我的钱包</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/integral.png" alt="">
+      <a ng-href="#/myntegral" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/integral.png" alt="">
         <p>我的积分</p>
       </a>
       <a ng-href="#/addressmanage" nav-direction=forward class="col-33 padding-top userinfo-border-b"><img ng-src="img/account/address.png" alt="">
         <p>地址管理</p>
       </a>
-      <a ng-href="" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/Invitation.png" alt="">
+      <a ng-href="#/invitationlist" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/Invitation.png" alt="">
         <p>邀请记录</p>
       </a>
       <a ng-href="#/helpfeedback" nav-direction=forward class="col-33 padding-top userinfo-border-rb"><img ng-src="img/account/opinion.png" alt="">
