--- a/www/templates/account/organizingdata.html
+++ b/www/templates/account/organizingdata.html
@@ -18,11 +18,11 @@
           <span class="input-label"> 宝宝姓名 :</span>
           <input type="text" ng-model="userinfo.baousername" placeholder="请输入宝宝姓名">
         </label>
-        <div class="item">
+        <div class="item ">
           <div class="row row-no-padding row-center radio">
             <span class="input-label col-30"> 性别 :</span>
-            <label class="col-25"> <input type="radio" name="sex"  value="1"/> 男生</label>
-            <label class="col-25"><input type="radio" name="sex"  value="2"/> 女生</label>
+            <label class="col-25"><input type="radio" name="sex" value="1"/> <i class=" icon ion-disc"></i> 男生</label>
+            <label class="col-25"><input type="radio" name="sex" value="2"/> <i class=" icon ion-disc"></i> 女生</label>
           </div>
         </div>
         <label class="item item-input ">
