--- a/www/css/account.css
+++ b/www/css/account.css
@@ -92,12 +92,67 @@
   border-right: 1px solid rgba(221, 221, 221, 0.3);
 }
 
-.radio input[type='radio'] {
- /* display: none;*/
+.radio label input[type='radio'] {
+  display: none;
 }
 
-.radio label {
-  position: relative;
+.radio label input:checked + i {
+  color: #FF93BC;
 }
 
+#mywallet .row-wrap {
+  padding-top: 6rem;
+  padding-bottom: 1rem;
+  margin-bottom: 1.5rem;
+}
 
+#mycoupon .item {
+  padding-bottom: 0;
+}
+
+#mywallet img {
+  display: block;
+  margin: 0rem auto 1rem;
+  width: 5rem;
+  height: 5rem;
+
+}
+
+#mycoupon .period-of-validity {
+  margin-top: 0.6rem;
+  padding-top: 0.5rem;
+  border-top: 1px solid rgba(221, 221, 221, 0.3);
+  font-size: 0.8rem;
+}
+
+#mycoupon .item img:last-of-type {
+  float: right;
+  margin-top: -2rem;
+  width: 3rem;
+  height: 2rem;
+}
+
+#invitationlist h5 {
+  font-size: 1.1rem;
+}
+
+#invitationlist .time {
+  padding-left: 0.5rem;
+  border-left: 1px solid rgba(221, 221, 221, 0.5);
+}
+
+#myntegral .myntegral-show  {
+  color: #ffffff!important;
+  padding: 1.5rem 2rem;
+}
+
+#myntegral .myntegral-show h1{
+  margin-top: 0;
+  padding-top: 0;
+  color: #ffffff;
+}
+
+#myntegral .getntegral {
+  padding-left: 0.5rem;
+  border-left: 1px solid rgba(221, 221, 221, 0.5);
+}
