--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -26,27 +26,27 @@
           <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
               <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                <p>蒙牛</p>
              </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                <p>伊利</p>
              </a>
@@ -54,27 +54,27 @@
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued ">
                 <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
@@ -82,27 +82,27 @@
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="" nav-direction=forward class="col-30">
+              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
                 <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
                 <p>伊利</p>
               </a>
