--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -27,14 +27,35 @@ $energized:#f26604 !default;
   -ms-flex: $fg $fs $fb;
   flex: $fg $fs $fb;
 }
-
+.col-5 {
+  @include flex(0, 0, 5%);
+  max-width: 5%;
+}
 .col-15 {
   @include flex(0, 0, 15%);
   max-width: 15%;
 }
+
 .col-30 {
   @include flex(0, 0, 30%);
   max-width: 30%;
+}
+.col-35 {
+  @include flex(0, 0, 35%);
+  max-width: 35%;
+}
+
+.col-45 {
+  @include flex(0, 0, 45%);
+  max-width: 45%;
+}
+.col-55 {
+  @include flex(0, 0, 55%);
+  max-width: 55%;
+}
+.col-65 {
+  @include flex(0, 0, 65%);
+  max-width: 65%;
 }
 .col-70 {
   @include flex(0, 0, 70%);
@@ -44,7 +65,10 @@ $energized:#f26604 !default;
   @include flex(0, 0, 85%);
   max-width: 85%;
 }
-
+.col-95 {
+  @include flex(0, 0, 95%);
+  max-width: 95%;
+}
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
