--- a/www/templates/shoppingcart.html
+++ b/www/templates/shoppingcart.html
@@ -15,7 +15,7 @@
     <ion-list class="list-borderless">
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails" nav-direction=forward >
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
@@ -23,7 +23,7 @@
       </ion-item>
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
@@ -31,7 +31,7 @@
       </ion-item>
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
@@ -39,7 +39,7 @@
       </ion-item>
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
@@ -47,7 +47,7 @@
       </ion-item>
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
@@ -55,7 +55,7 @@
       </ion-item>
       <p></p>
       <ion-item class="item-thumbnail-left  shoppingcart-list">
-        <img ng-src="img/main/1.png" alt="">
+        <img ng-src="img/main/1.png" alt="" ui-sref="productdetails">
         <h2>婴幼儿配方奶粉3段</h2>
         <p class="text-wrap">100%海外原装正品荷兰Hero Baby婴幼儿奶粉白井塅3段 700g</p>
         <p class="row row-center"><span class="col-75"><strong class="energized">￥49.</strong><span class="energized">00</span></span> <i
