--- a/www/css/main.css
+++ b/www/css/main.css
@@ -22,7 +22,7 @@
   position: relative;
   z-index: 1000;
   bottom: -0.8rem;
-  font-size: 0.6rem!important;
+  font-size: 0.6rem !important;
 }
 
 .slider-pager-page.active {
@@ -60,24 +60,25 @@
 
 }
 
-#main-scroll > span {
+#main-scroll > a {
   display: inline-block;
   width: 30%;
+  padding: 0 0.1rem;
+  text-decoration: none;
 }
 
-#main-scroll > span > p {
+#main-scroll > a > p {
   color: #000000;
   height: 40px;
 
 }
 
-#main-scroll > span > img {
+#main-scroll > a > img {
   display: block;
   margin: auto;
   width: 4rem;
   height: 4rem;
 }
-
 
 #classify .col-25 .item {
   text-align: center;
@@ -86,22 +87,36 @@
 
 .classify-selected h2 {
   border-left: 5px solid #FF93BC !important;
-  color:#FF93BC;
+  color: #FF93BC;
 }
 
-.classify-details-bar{
-   padding: 0.3rem 0.8rem;
+.classify-details-bar {
+  padding: 0.3rem 0.8rem;
   font-weight: 700;
 }
-#classify-scroll-content img{
-  width: 70%!important;
+
+#classify-scroll-content .row a:last-of-type{
+  padding-right: 10px;
 }
-#classify-scroll-content p{
+#classify-scroll-content img {
+  width: 3.2rem !important;
+}
+
+#classify-scroll-content p {
   color: #585858;
 }
 
-#productlist{
+#productlist {
   height: 100%;
+}
+
+#productlist-tab .row{
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+#productlist-tab .active {
+  color: #FF93BC;
+  border-bottom: 3px solid #FF93BC;
 }
 
 .tool-tip {
