--- a/www/templates/classify.html
+++ b/www/templates/classify.html
@@ -24,89 +24,90 @@
       <div class="col-75">
         <ion-scroll ng-style="{height:scrollHeight}" direction="y" overflow-scroll="false"  has-bouncing="true">
           <div id="classify-scroll-content" ng-style="{height:scrollContentHeight}" >
-            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
+            <div class="row row-no-padding   text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-               <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top userinfo-border-rb">
+               <img ng-src="img/main/cp@2.jpg"  alt=""/>
                <p>伊利</p>
              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-rb">
+               <img ng-src="img/main/cp@5.jpg"  alt=""/>
                <p>蒙牛</p>
              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-b">
+               <img ng-src="img/main/cp@6.jpg"  alt=""/>
                <p>伊利</p>
              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-              <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+              <img ng-src="img/main/cp@2.jpg"  alt=""/>
               <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-               <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+               <img ng-src="img/main/cp@5.jpg"  alt=""/>
                <p>蒙牛</p>
              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-               <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-               <p>伊利</p>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top">
+                <img ng-src="img/main/cp@6.jpg"  alt=""/>
+                <p>伊利</p>
              </a>
-             </span>
+
+            </div>
+            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
+              <p class="stable-bg  full-image text-left classify-details-bar"> 牛奶系列</p>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top userinfo-border-rb">
+                <img ng-src="img/main/cp@2.jpg"  alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-rb">
+                <img ng-src="img/main/cp@5.jpg"  alt=""/>
+                <p>蒙牛</p>
+              </a>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-b">
+                <img ng-src="img/main/cp@6.jpg"  alt=""/>
+                <p>伊利</p>
+              </a>
+
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+                <img ng-src="img/main/cp@2.jpg"  alt=""/>
+                <p>伊利</p>
+              </a>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+                <img ng-src="img/main/cp@5.jpg"  alt=""/>
+                <p>蒙牛</p>
+              </a>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top">
+                <img ng-src="img/main/cp@6.jpg"  alt=""/>
+                <p>伊利</p>
+              </a>
             </div>
             <div class="row row-no-padding text-center row-wrap row-horizontal-around">
               <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued  padding-top userinfo-border-rb">
+                <img ng-src="img/main/cp@2.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-rb">
+                <img ng-src="img/main/cp@5.jpg"  alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-b">
+                <img ng-src="img/main/cp@6.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
+
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+                <img ng-src="img/main/cp@2.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued ">
-                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top userinfo-border-r">
+                <img ng-src="img/main/cp@5.jpg"  alt=""/>
                 <p>蒙牛</p>
               </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
+              <a ng-href="#/productlist" nav-direction=forward class="col-33  subdued padding-top">
+                <img ng-src="img/main/cp@6.jpg"  alt=""/>
                 <p>伊利</p>
               </a>
-              </span>
-            </div>
-            <div class="row row-no-padding text-center row-wrap row-horizontal-around">
-              <p class="stable-bg  full-image text-left classify-details-bar"> 奶粉系列</p>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
-                <p>蒙牛</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@2.jpg" class="full-image" alt=""/>
-                <p>伊利</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@5.jpg" class="full-image" alt=""/>
-                <p>蒙牛</p>
-              </a>
-              <a ng-href="#/productlist" nav-direction=forward class="col-30  subdued">
-                <img ng-src="img/main/cp@6.jpg" class="full-image" alt=""/>
-                <p>伊利</p>
-              </a>
-              </span>
             </div>
           </div>
         </ion-scroll>
